--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -80,7 +80,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Pitufos -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- ¡El show de Cuphead! -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie96.html">
+    <img src="https://image.tmdb.org/t/p/original/6r8AdejbqTfZeMxFapitNAZnASA.jpg" alt="¡El show de Cuphead!" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">¡El show de Cuphead!</div>
+  <div class="text-xs text-white/70">2022</div>
+</article><!-- Pitufos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula866.html">
     <img src="https://image.tmdb.org/t/p/original/zBdQclxQnEDOhDOjkKgKPW6jEHh.jpg" alt="Pitufos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
