--- a/Plataforma/netflix/index.html
+++ b/Plataforma/netflix/index.html
@@ -190,7 +190,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Almost Cops -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- ¡El show de Cuphead! -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie96.html">
+    <img src="https://image.tmdb.org/t/p/original/6r8AdejbqTfZeMxFapitNAZnASA.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">¡El show de Cuphead!</div>
+  <div class="text-xs text-white/70">2022</div>
+</article><!-- Almost Cops -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula852.html">
     <img src="https://image.tmdb.org/t/p/original/vIkfAFMOOro5U01raZJ9nScGeBM.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
