Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Gen V -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- ¡El show de Cuphead! -->
+<li>
+  <a href="../Series/serie96.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/6r8AdejbqTfZeMxFapitNAZnASA.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">¡El show de Cuphead! 2022</span>
+    <span class="hidden">No te pierdas las desventuras de nuestro impulsivo héroe y de su precavido pero fiel hermano en esta serie animada basada en el exitoso videojuego.</span>
+  </a>
+</li>
+<!--FIN--><!-- Gen V -->
 <li>
   <a href="../Series/serie95.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
