--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- ¡El show de Cuphead! -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Batman: La Serie Animada -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie97.html">
+    <img src="https://image.tmdb.org/t/p/original/gcOV7JFbJpNqH8mzSuL8jG1WVy4.jpg" alt="Batman: La Serie Animada" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Batman: La Serie Animada</div>
+  <div class="text-xs text-white/70">1992</div>
+</article><!-- ¡El show de Cuphead! -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie96.html">
     <img src="https://image.tmdb.org/t/p/original/6r8AdejbqTfZeMxFapitNAZnASA.jpg" alt="¡El show de Cuphead!" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
