--- a/Plataforma/dccomics/index.html
+++ b/Plataforma/dccomics/index.html
@@ -198,7 +198,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Jovenes Titanes: Mision Tokio -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Batman: La Serie Animada -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie97.html">
+    <img src="https://image.tmdb.org/t/p/original/gcOV7JFbJpNqH8mzSuL8jG1WVy4.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Batman: La Serie Animada</div>
+  <div class="text-xs text-white/70">1992</div>
+</article><!-- Los Jovenes Titanes: Mision Tokio -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula807.html">
     <img src="https://image.tmdb.org/t/p/original/qaDfL5fQru8ecfCrpCMH1T4dSaR.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
