--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- ¡El show de Cuphead! -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Batman: La Serie Animada -->
+<li>
+  <a href="../Series/serie97.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/gcOV7JFbJpNqH8mzSuL8jG1WVy4.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Batman: La Serie Animada 1992</span>
+    <span class="hidden">Considerada la mejor adaptación de Batman a la pantalla, esta serie de Bruce W. Timm narraba en un tono oscuro y adulto la historia del héroe de DC Comics, Batman, presentando una Gotham inspirada en la de la película de Tim Burton.</span>
+  </a>
+</li>
+<!--FIN--><!-- ¡El show de Cuphead! -->
 <li>
   <a href="../Series/serie96.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
