--- a/Plataforma/anime/index.html
+++ b/Plataforma/anime/index.html
@@ -52,7 +52,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
   <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Appleseed Alpha -->
+    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Dance in the Vampire Bund -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie98.html">
+    <img src="https://image.tmdb.org/t/p/original/7Q3ZU0hyUCJTLm56Lhj6Zxwe0kb.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Dance in the Vampire Bund</div>
+  <div class="text-xs text-white/70">2010</div>
+</article><!-- Appleseed Alpha -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula790.html">
     <img src="https://image.tmdb.org/t/p/original/be1Oa4JihT875bPJpv7QaWvYiYt.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
