Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Batman: La Serie Animada -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Dance in the Vampire Bund -->
+<li>
+  <a href="../Series/serie98.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/7Q3ZU0hyUCJTLm56Lhj6Zxwe0kb.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Dance in the Vampire Bund 2010</span>
+    <span class="hidden">Tras cientos de años escondidos, Mina Tepes, soberana de todos los vampiros desea un cambio. Usando la inmensa riqueza obtenida a lo largo de centenares de años, decide pagar la deuda externa de Japón a cambio de poseer un distrito propio cerca de la costa el cual se convertirá en el hogar de todos los vampiros. Ahora, en la víspera de la conferencia de prensa que anuncia la existencia de los vampiros al mundo, terroristas y las facciones rivales tratan de asesinar a Mina Tepes antes de que pueda anunciar la existencia de los vampiros.</span>
+  </a>
+</li>
+<!--FIN--><!-- Batman: La Serie Animada -->
 <li>
   <a href="../Series/serie97.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
