--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/7Q3ZU0hyUCJTLm56Lhj6Zxwe0kb.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Dance in the Vampire Bund 2010</span>
-    <span class="hidden">Tras cientos de años escondidos, Mina Tepes, soberana de todos los vampiros desea un cambio. Usando la inmensa riqueza obtenida a lo largo de centenares de años, decide pagar la deuda externa de Japón a cambio de poseer un distrito propio cerca de la costa el cual se convertirá en el hogar de todos los vampiros. Ahora, en la víspera de la conferencia de prensa que anuncia la existencia de los vampiros al mundo, terroristas y las facciones rivales tratan de asesinar a Mina Tepes antes de que pueda anunciar la existencia de los vampiros.</span>
+    <span class="hidden">bailando con vampiros danzando dancando dansando los Tras cientos de años escondidos, Mina Tepes, soberana de todos los vampiros desea un cambio. Usando la inmensa riqueza obtenida a lo largo de centenares de años, decide pagar la deuda externa de Japón a cambio de poseer un distrito propio cerca de la costa el cual se convertirá en el hogar de todos los vampiros. Ahora, en la víspera de la conferencia de prensa que anuncia la existencia de los vampiros al mundo, terroristas y las facciones rivales tratan de asesinar a Mina Tepes antes de que pueda anunciar la existencia de los vampiros.</span>
   </a>
 </li>
 <!--FIN--><!-- Batman: La Serie Animada -->
@@ -118,7 +118,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/6r8AdejbqTfZeMxFapitNAZnASA.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">¡El show de Cuphead! 2022</span>
-    <span class="hidden">No te pierdas las desventuras de nuestro impulsivo héroe y de su precavido pero fiel hermano en esta serie animada basada en el exitoso videojuego.</span>
+    <span class="hidden">la serie el shor de cuphead No te pierdas las desventuras de nuestro impulsivo héroe y de su precavido pero fiel hermano en esta serie animada basada en el exitoso videojuego.</span>
   </a>
 </li>
 <!--FIN--><!-- Gen V -->
