--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- ¡El show de Cuphead! -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Assassination Classroom -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie99.html">
+    <img src="https://image.tmdb.org/t/p/original/fIOYLPOorKvP4wut9y0edpnWROz.jpg" alt="Assassination Classroom" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Assassination Classroom</div>
+  <div class="text-xs text-white/70">2015</div>
+</article><!-- ¡El show de Cuphead! -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie96.html">
     <img src="https://image.tmdb.org/t/p/original/6r8AdejbqTfZeMxFapitNAZnASA.jpg" alt="¡El show de Cuphead!" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
