Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Dance in the Vampire Bund -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Assassination Classroom -->
+<li>
+  <a href="../Series/serie99.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/fIOYLPOorKvP4wut9y0edpnWROz.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Assassination Classroom 2015</span>
+    <span class="hidden">La Tierra se ve amenazada por un poderoso monstruo que destruyó el 70% de la Luna con su poder, dejándola permanentemente en forma de cuarto creciente. El monstruo afirma que dentro de un año, la Tierra también será destruida por él, pero ofrece a la humanidad una oportunidad para evitar ese destino. Éste mismo comienza a trabajar como maestro en la clase 3-E de la secundaria Kunugigaoka, cuyos estudiantes tienen el objetivo de asesinarlo. El gobierno japonés promete una recompensa de ¥10 billones (100 millones de dólares,</span>
+  </a>
+</li>
+<!--FIN--><!-- Dance in the Vampire Bund -->
 <li>
   <a href="../Series/serie98.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
