--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Assassination Classroom -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Akame ga Kill! -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie101.html">
+    <img src="https://image.tmdb.org/t/p/original/a9s3VJIhIPE0tgQ29mZGQMx0s4j.jpg" alt="Akame ga Kill!" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Akame ga Kill!</div>
+  <div class="text-xs text-white/70">2014</div>
+</article><!-- Assassination Classroom -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie99.html">
     <img src="https://image.tmdb.org/t/p/original/fIOYLPOorKvP4wut9y0edpnWROz.jpg" alt="Assassination Classroom" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
