Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los anos maravillosos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Akame ga Kill! -->
+<li>
+  <a href="../Series/serie101.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/a9s3VJIhIPE0tgQ29mZGQMx0s4j.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Akame ga Kill! 2014</span>
+    <span class="hidden">El joven Tatsumi viaja a la capital del Imperio con el propósito de ganar dinero para su pueblo hambriento y se encuentra con un mundo de depravación inimaginable, dominado por el despiadado Primer Ministro que controla al niño Emperador. Tatsumi es reclutado por Night Raid, un grupo de asesinos dedicado a eliminar la corrupción matando sin piedad a funcionarios y nobles privilegiados.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los anos maravillosos -->
 <li>
   <a href="../Series/serie100.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
