Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Akame ga Kill! -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Todo de ti -->
+<li>
+  <a href="../Peliculas/pelicula867.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/bC982oyPD6JCMa0V3Ve1vvaUVk3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Todo de ti 2025</span>
+    <span class="hidden">Laura y Simon son mejores amigos desde la universidad. Con los años, notaron que su relación es más que platónica. ¿Podrían, o deberían, arriesgarlo todo para explorar un amor que siempre existió?</span>
+  </a>
+</li>
+<!--FIN--><!-- Akame ga Kill! -->
 <li>
   <a href="../Series/serie101.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
