--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Todo de ti -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Academia de villanos -->
+<li>
+  <a href="../Peliculas/pelicula868.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/lRIvhKw058RFYHdXpdAPROTdWpx.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Academia de villanos 2025</span>
+    <span class="hidden">Cuando una TV misteriosa la transporta a una escuela de villanos, una empleada de restaurante encuentra un nuevo propósito... y una forma de vengarse de sus enemigos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Todo de ti -->
 <li>
   <a href="../Peliculas/pelicula867.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
