Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Academia de villanos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Exorcismo: El Ritual -->
+<li>
+  <a href="../Peliculas/pelicula869.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/nMYxbHiWHrykZNwnTC9oAWXQPWw.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Exorcismo: El Ritual 2025</span>
+    <span class="hidden">Cuando una joven es poseída por una entidad demoníaca implacable, dos sacerdotes con pasados muy distantes deben unir fuerzas para salvarla. Uno es un veterano exorcista (Al Pacino), atormentado por su propio fracaso en un caso anterior. El otro (Dan Stevens), un sacerdote joven, lucha contra sus dudas y una fe que se tambalea. Juntos se adentrarán en un ritual que pondrá a prueba sus creencias, su cordura y sus vidas.</span>
+  </a>
+</li>
+<!--FIN--><!-- Academia de villanos -->
 <li>
   <a href="../Peliculas/pelicula868.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
