Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Exorcismo: El Ritual -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Camina o muere -->
+<li>
+  <a href="../Peliculas/pelicula870.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/kXIw6UiO2zANEPyStiYoEIopN0q.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Camina o muere 2025</span>
+    <span class="hidden">Un grupo de adolescentes compite en un concurso anual conocido como "La Larga Marcha", en el que deben mantener una cierta velocidad al caminar o recibir un disparo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Exorcismo: El Ritual -->
 <li>
   <a href="../Peliculas/pelicula869.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
