Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Camina o muere -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una batalla tras otra -->
+<li>
+  <a href="../Peliculas/pelicula871.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/iZ1499F6hYxDxiqioy8oSUaxipG.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Una batalla tras otra 2025</span>
+    <span class="hidden">Cuando su malvado némesis resurge después de 16 años, una banda de ex revolucionarios se reúne para rescatar a la hija de uno de los suyos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Camina o muere -->
 <li>
   <a href="../Peliculas/pelicula870.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
