--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Una batalla tras otra -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Atrapado robando -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula872.html">
+    <img src="https://image.tmdb.org/t/p/original/oyl44sKyNdWbVajTAz6oG6DZm8V.jpg" alt="Atrapado robando" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Atrapado robando</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Una batalla tras otra -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula871.html">
     <img src="https://image.tmdb.org/t/p/original/iZ1499F6hYxDxiqioy8oSUaxipG.jpg" alt="Una batalla tras otra" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
