--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una batalla tras otra -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Atrapado robando -->
+<li>
+  <a href="../Peliculas/pelicula872.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/oyl44sKyNdWbVajTAz6oG6DZm8V.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Atrapado robando 2025</span>
+    <span class="hidden">Nueva York, años 90. El ex jugador de béisbol Hank Thompson se ve inesperadamente envuelto en una peligrosa lucha por la supervivencia en medio de un submundo criminal peligroso.</span>
+  </a>
+</li>
+<!--FIN--><!-- Una batalla tras otra -->
 <li>
   <a href="../Peliculas/pelicula871.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
