--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Atrapado robando -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Y ella dijo quizas -->
+<li>
+  <a href="../Peliculas/pelicula873.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zxiL8i4fxhdFFwvfkTTahQCK7dT.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Y ella dijo quizás 2025</span>
+    <span class="hidden">Cuando Mavi, que creció en Alemania, descubre que pertenece a una dinastía turca superadinerada, las expectativas de su nueva familia sacuden su vida personal y amorosa.</span>
+  </a>
+</li>
+<!--FIN--><!-- Atrapado robando -->
 <li>
   <a href="../Peliculas/pelicula872.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
