--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Y ella dijo quizas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El mismo dia contigo -->
+<li>
+  <a href="../Peliculas/pelicula874.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/lqYyrLLLpvfQLay7Q2ttUYa1wGj.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El mismo día contigo 2025</span>
+    <span class="hidden">Atrapada en un bucle temporal, una conservadora de museo revive el día en que todo sale mal y debe ir más allá de su vida perfecta para liberarse.</span>
+  </a>
+</li>
+<!--FIN--><!-- Y ella dijo quizas -->
 <li>
   <a href="../Peliculas/pelicula873.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
