Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El mismo dia contigo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Verano infernal -->
+<li>
+  <a href="../Peliculas/pelicula875.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/gCEJCaIzrU7FiOrv6fMMMnQ163B.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Verano infernal 2025</span>
+    <span class="hidden">El monitor Jason Hochberg, de 24 años, llega al campamento Pineway pensando que su mayor problema es que se siente desconectado de sus compañeros adolescentes. Lo que no sabe es que un asesino enmascarado está al acecho, matando brutalmente a los monitores uno a uno.</span>
+  </a>
+</li>
+<!--FIN--><!-- El mismo dia contigo -->
 <li>
   <a href="../Peliculas/pelicula874.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
