--- a/Categorias/drama/index.html
+++ b/Categorias/drama/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Y ella dijo quizas -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi ano en Oxford -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula877.html">
+    <img src="https://image.tmdb.org/t/p/original/iKT49ApsXGKYY3wdZ0THYhhgOBe.jpg" alt="Mi año en Oxford" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mi año en Oxford</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Y ella dijo quizas -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula873.html">
     <img src="https://image.tmdb.org/t/p/original/zxiL8i4fxhdFFwvfkTTahQCK7dT.jpg" alt="Y ella dijo quizás" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
