Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Osiris -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi ano en Oxford -->
+<li>
+  <a href="../Peliculas/pelicula877.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/iKT49ApsXGKYY3wdZ0THYhhgOBe.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mi año en Oxford 2025</span>
+    <span class="hidden">Una estadounidense ambiciosa cumple su sueño de estudiar en Oxford, pero se enamora de un encantador profesor que esconde un secreto que podría cambiar todos sus planes.</span>
+  </a>
+</li>
+<!--FIN--><!-- Osiris -->
 <li>
   <a href="../Peliculas/pelicula876.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
