Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- ¡Armados! -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un cuento de pescadores: La maldicion de La Miringua -->
+<li>
+  <a href="../Peliculas/pelicula879.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/1HKDF6HEuJsnvTgvypphpVN3OSF.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Un cuento de pescadores: La maldición de La Miringua 2025</span>
+    <span class="hidden">Una historia de terror que entrelaza cuatro relatos en una isla pesquera del lago de Pátzcuaro, Michoacán, donde un malvado espíritu lacustre acecha a los habitantes, proyectando una oscura sombra sobre sus vidas.</span>
+  </a>
+</li>
+<!--FIN--><!-- ¡Armados! -->
 <li>
   <a href="../Peliculas/pelicula878.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
