Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mis 84 m² -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El hombre sin memoria -->
+<li>
+  <a href="../Peliculas/pelicula881.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/sGUFzO1P703rq7YeuNOC74Y58FS.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El hombre sin memoria 2025</span>
+    <span class="hidden">Al despertar en una ciudad desconocida, un hombre que no recuerda quién es debe enfrentarse a los misterios de su propia identidad. Pero su desesperada búsqueda por descubrir su pasado le enfrenta a un poderoso enemigo, lo que le llevará a un enfrentamiento que sellará su destino y revelará finalmente su verdadera identidad.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mis 84 m² -->
 <li>
   <a href="../Peliculas/pelicula880.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
