Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El hombre sin memoria -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Paul -->
+<li>
+  <a href="../Peliculas/pelicula882.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/e57pNjhWbRos9BTvgeUYUzB8VfO.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Paul 2011</span>
+    <span class="hidden">Un viajero espacial muy listillo llamado Paul (SETH ROGEN, The Green Hornet, Lío embarazoso) lleva sesenta años encerrado en una base militar ultrasecreta, aconsejando a los líderes mundiales acerca de otros alienígenas. Cuando empieza a darse cuenta de que ya no es tan útil y de que la mesa de disección se acerca peligrosamente, Paul decide escapar en la primera autocaravana que se detiene cerca de la base militar en el Área 51. Por suerte para él, en dicha autocaravana van dos terrícolas perfectamente dispuestos a rescatar y albergar a un alienígena con problemas.</span>
+  </a>
+</li>
+<!--FIN--><!-- El hombre sin memoria -->
 <li>
   <a href="../Peliculas/pelicula881.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
