Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Paul -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi mascota es un monstruo -->
+<li>
+  <a href="../Peliculas/pelicula883.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jIQScY2dytYRYQDWJ6mt3PTH3oT.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mi mascota es un monstruo 2007</span>
+    <span class="hidden">El protagonista es Angus MacMorrow (Alex Etel), un solitario muchacho escocés que vive con el deseo de que su padre regrese de la guerra. Un día, Angus lleva a casa un extraño objeto que encuentra en la playa, se da cuenta muy pronto de que se trata de un huevo mágico y su fantasía se desborda: se imagina criando a un ser fabuloso: el "monstruo del lago Ness", uno de los mitos escoceses más populares. Intenta mantenerlo oculto y establecer con él un estrecho vínculo de amistad.</span>
+  </a>
+</li>
+<!--FIN--><!-- Paul -->
 <li>
   <a href="../Peliculas/pelicula882.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
