Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi mascota es un monstruo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Baby: El aprendiz del crimen -->
+<li>
+  <a href="../Peliculas/pelicula884.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/o2YToge3eBhxC89m87zkWKVEx2O.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Baby: El aprendiz del crimen 2017</span>
+    <span class="hidden">Baby es un joven conductor y amante de la música que debe trabajar para un jefe criminal. Pero, tan pronto conoce a la chica de sus sueños, Baby tratará de deshacerse de su vida delictiva y hacer una retirada limpia.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mi mascota es un monstruo -->
 <li>
   <a href="../Peliculas/pelicula883.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
