Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Baby: El aprendiz del crimen -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Standoff -->
+<li>
+  <a href="../Peliculas/pelicula885.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/m6aITji0GwOUwDeeNYgkCPreQO0.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Standoff 2016</span>
+    <span class="hidden"></span>
+  </a>
+</li>
+<!--FIN--><!-- Baby: El aprendiz del crimen -->
 <li>
   <a href="../Peliculas/pelicula884.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
