--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/m6aITji0GwOUwDeeNYgkCPreQO0.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Standoff 2016</span>
-    <span class="hidden"></span>
+    <span class="hidden">acorralados </span>
   </a>
 </li>
 <!--FIN--><!-- Baby: El aprendiz del crimen -->
@@ -109,7 +109,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/o2YToge3eBhxC89m87zkWKVEx2O.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Baby: El aprendiz del crimen 2017</span>
-    <span class="hidden">Baby es un joven conductor y amante de la música que debe trabajar para un jefe criminal. Pero, tan pronto conoce a la chica de sus sueños, Baby tratará de deshacerse de su vida delictiva y hacer una retirada limpia.</span>
+    <span class="hidden">Baby driver  es un joven conductor y amante de la música que debe trabajar para un jefe criminal. Pero, tan pronto conoce a la chica de sus sueños, Baby tratará de deshacerse de su vida delictiva y hacer una retirada limpia.</span>
   </a>
 </li>
 <!--FIN--><!-- Mi mascota es un monstruo -->
@@ -127,7 +127,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/e57pNjhWbRos9BTvgeUYUzB8VfO.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Paul 2011</span>
-    <span class="hidden">Un viajero espacial muy listillo llamado Paul (SETH ROGEN, The Green Hornet, Lío embarazoso) lleva sesenta años encerrado en una base militar ultrasecreta, aconsejando a los líderes mundiales acerca de otros alienígenas. Cuando empieza a darse cuenta de que ya no es tan útil y de que la mesa de disección se acerca peligrosamente, Paul decide escapar en la primera autocaravana que se detiene cerca de la base militar en el Área 51. Por suerte para él, en dicha autocaravana van dos terrícolas perfectamente dispuestos a rescatar y albergar a un alienígena con problemas.</span>
+    <span class="hidden">el extraterrestre alienigena Un viajero espacial muy listillo llamado Paul (SETH ROGEN, The Green Hornet, Lío embarazoso) lleva sesenta años encerrado en una base militar ultrasecreta, aconsejando a los líderes mundiales acerca de otros alienígenas. Cuando empieza a darse cuenta de que ya no es tan útil y de que la mesa de disección se acerca peligrosamente, Paul decide escapar en la primera autocaravana que se detiene cerca de la base militar en el Área 51. Por suerte para él, en dicha autocaravana van dos terrícolas perfectamente dispuestos a rescatar y albergar a un alienígena con problemas.</span>
   </a>
 </li>
 <!--FIN--><!-- El hombre sin memoria -->
@@ -145,7 +145,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/xhsXOE2FWBGOaHUoAnjBUW1Y1Ds.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Mis 84 m² 2025</span>
-    <span class="hidden">Un hombre que invirtió todos sus ahorros en un nuevo apartamento descubre que detrás de sus paredes se ocultan ruidos molestos, vecinos hostiles y secretos inquietantes.</span>
+    <span class="hidden">metros cuadrados Un hombre que invirtió todos sus ahorros en un nuevo apartamento descubre que detrás de sus paredes se ocultan ruidos molestos, vecinos hostiles y secretos inquietantes.</span>
   </a>
 </li>
 <!--FIN--><!-- Un cuento de pescadores: La maldicion de La Miringua -->
@@ -163,7 +163,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/dwtyFDyK5j7Tyk2kszs9poe0h5r.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">¡Armados! 2025</span>
-    <span class="hidden">Un expolicía y padre de familia, que ha trabajado en secreto para la mafia, ve su vida y la de los suyos amenazada. Cuando un nuevo jefe en la banda se hace con el poder, tendrá una noche para sacarlos de la ciudad.</span>
+    <span class="hidden">armados Un expolicía y padre de familia, que ha trabajado en secreto para la mafia, ve su vida y la de los suyos amenazada. Cuando un nuevo jefe en la banda se hace con el poder, tendrá una noche para sacarlos de la ciudad.</span>
   </a>
 </li>
 <!--FIN--><!-- Mi ano en Oxford -->
