Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Standoff -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una boda en las bahamas con madea -->
+<li>
+  <a href="../Peliculas/pelicula886.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/brXUEyuY25r3ksIt8poDGjNyWNt.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Una boda en las bahamas con madea 2025</span>
+    <span class="hidden">Madea y su familia asisten a la precipitada boda de Tiffany en Bahamas. Las tensiones surgen cuando Tiffany duda de su prometido, Zavier, y su madre actúa de forma extraña, levantando sospechas sobre la legitimidad del matrimonio.</span>
+  </a>
+</li>
+<!--FIN--><!-- Standoff -->
 <li>
   <a href="../Peliculas/pelicula885.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
