Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una boda en las bahamas con madea -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El regreso a casa de Madea -->
+<li>
+  <a href="../Peliculas/pelicula887.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/a98l9jruh8MuquTe6hrd8vSieN1.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El regreso a casa de Madea 2022</span>
+    <span class="hidden">El polifacético magnate de los medios Tyler Perry recupera a su entrañable personaje Madea.</span>
+  </a>
+</li>
+<!--FIN--><!-- Una boda en las bahamas con madea -->
 <li>
   <a href="../Peliculas/pelicula886.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
