Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El regreso a casa de Madea -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Nueve -->
+<li>
+  <a href="../Peliculas/pelicula888.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/mu1zDw4qxlUzrBizasO24unC766.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Nueve 2009</span>
+    <span class="hidden">Aventura post-apocalíptica protagonizada por nueve muñecos de trapo que deberán enfrentarse a unas máquinas gigantes si quieren preservar el futuro de la civilización. La historia transcurre en un futuro muy próximo. El invento conocido como la Gran Máquina activa y aporta energía a las máquinas que se han alzado contra la raza humana, diezmando a la población, antes de empezar a apagarse. El mundo pronto quedará destruido, pero un grupo de pequeños seres intenta salvar lo poco que queda de la civilización.</span>
+  </a>
+</li>
+<!--FIN--><!-- El regreso a casa de Madea -->
 <li>
   <a href="../Peliculas/pelicula887.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
