Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Nueve -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Dos Tontos Muy Tontos -->
+<li>
+  <a href="../Peliculas/pelicula889.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/oJSYzIRoJLqNcMMgy8ErCJjSJf9.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Dos Tontos Muy Tontos 1994</span>
+    <span class="hidden">Cuando Lloyd, un chófer de una limousina, se enamora de una chica adinerada que desaparece dejando olvidado un maletín, él y su amigo Harry, un transportador de perros, emprenderán un viaje por todo el país para devolvérselo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Nueve -->
 <li>
   <a href="../Peliculas/pelicula888.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
