Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Dos Tontos Muy Tontos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una Pareja de Idiotas 2 -->
+<li>
+  <a href="../Peliculas/pelicula890.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zsm4tAiPire8ZlmosySZqywxCvY.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Una Pareja de Idiotas 2 2014</span>
+    <span class="hidden">Han pasado ya veinte años desde que Harry y Lloyd se conocieran y formaran el divertido dúo que nos hizo reír con sus disparatadas ocurrencias, pero ninguno de los dos parece haber madurado. Harry tiene una hija a la que apenas conoce, y necesitando un trasplante de riñón, intenta localizarla para pedirle que le done uno de los suyos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Dos Tontos Muy Tontos -->
 <li>
   <a href="../Peliculas/pelicula889.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
