Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una Pareja de Idiotas 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Las guerreras k-pop -->
+<li>
+  <a href="../Peliculas/pelicula891.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/swQRKmW7RLhncPYHvM0RHz8b7bT.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Las guerreras k-pop 2025</span>
+    <span class="hidden">Cuando no están llenando estadios, las superestrellas del k‑pop Rumi, Mira y Zoey usan sus superpoderes secretos para proteger a sus fans de amenazas sobrenaturales.</span>
+  </a>
+</li>
+<!--FIN--><!-- Una Pareja de Idiotas 2 -->
 <li>
   <a href="../Peliculas/pelicula890.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
